--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 1000px;
 
-    background: url("../img/Intro2.png") center no-repeat;
+    background: url(img/Intro2.png) center no-repeat;
     background-size: cover;
 
 }
@@ -56,13 +56,25 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
     max-width: 880px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .intro__subtitle {
+    margin-bottom: 20px;
     font-family: "Kaushan Script", cursive;
     font-size: 72px;
     color: #fff;
     text-align: center;
+}
+
+.intro__title:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 70px auto 0; /*вырав. по ценмру */
+
+    background-color: #fff;
 }
 
 
@@ -129,6 +141,383 @@ h1, h2, h3, h4, h5, h6 {
 .nav__link:hover:after {
     opacity: 1;
 }
+
+
+/* Button
+================== */
+
+.btn {
+    margin-top: 50px;
+    display: inline-block;
+    vertical-align: top;
+    padding: 10px 35px;
+
+    border: 3px solid #fff;
+
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 14px;
+    text-decoration: none;
+    transition: background .1s linear;
+}
+
+.btn:hover {
+    background-color: #fff;
+    color: #333;
+}
+
+/* Slider
+============= */
+
+.slider {
+    margin-top: 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.slider__item {
+    width: 24%;
+    padding: 25px 0;
+    position: relative;
+
+    border-top: 3px solid #fff;
+
+    font-size: 18px;
+    opacity: .7;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.slider__item.active {
+    opacity: 1;
+}
+
+.slider__item.active:before {
+    content: "";
+    display: block;
+
+    width: 70px;
+    height: 3.5px;
+
+    position: absolute;
+    top: -3px;
+    left: 0;
+    z-index: 1;
+    background-color: #f38181;
+
+}
+
+.slider__num {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+
+/* Section
+================ */
+
+.section {
+    padding: 80px 0;
+
+}
+
+.section__header {
+    width: 100%;
+    max-width: 950px;
+    margin: 0 auto 40px;
+
+    text-align: center;
+}
+
+.section__subtitle {
+    font-size: 24px;
+    color: #333;
+    font-family: "Kaushan Script", cursive;
+}
+
+.section__title {
+    color: #333;
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.section__title:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 30px auto 30px;
+    background-color: #f38181;
+}
+
+.section__text {
+    font-size: 15px;
+    color: #999;
+    font-family: "Roboto";
+}
+
+/* About
+================= */
+
+.about {
+    margin: 80px 0 40px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about__item {
+    width: 33,3%;
+    height: 250px;
+
+    position: relative;
+    background-color: #95e1d3; /* фоновый цвеt осtаеtся, а конtейнер уезжаеt влево вверх */
+}
+
+.about__item:hover .about__img img {
+    opacity: .1;
+}
+
+.about__img {
+    background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
+    transition: transform .1s linear; /* плавное смещение конtейнера */
+}
+
+.about__item:hover .about__img {
+    transform: translate3d(-10px, -10px, 0); /*смещаем конtейнер в 3d плоскосtи на -10 по X, Y и Z */
+}
+
+.about__item:hover .about__content {
+    opacity: 1;
+}
+.about__img img {
+    transition: opacity .2s linear;
+    display: block;
+}
+
+.about__content{
+    width: 100%;
+
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    opacity: 0;
+
+    position: absolute;
+    top: 50%;
+    z-index: 2;
+    transform: translate3d(0, -50%, 0);
+
+    transition: opacity .2s linear;
+}
+
+/* Statistic
+========================= */
+
+.statistic {
+    background-color: #95e1d3;
+}
+
+.stat {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.statistic__item {
+    padding: 40px 0;
+    width: 20%;
+    border-left: 1px solid #b5eae0;
+    color: #fff;
+    text-align: center;
+}
+
+.statistic__item:last-child {
+    border-right: 1px solid #b5eae0;
+}
+.statistic__number {
+    font-family: "Montserrat";
+    font-size: 72px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.statistic__text {
+    font-family: "Montserrat";
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+/* Services
+=================== */
+
+.services {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+
+    padding: 40px 0 40px 60px;
+    position: relative;
+    width: 33%;
+    text-align: left;
+
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.services__title {
+    color: #333;
+    font-family: "Montserrat";
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.secvices__text {
+    color: #9999;
+    font-family: "Roboto";
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.services__icon {
+    padding-top: 50px;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    position: absolute;
+}
+
+.services__item:nth-child(n+4) {
+    border-bottom: none;
+}
+
+/* Design
+===================== */
+
+.section--design {
+    margin-bottom: 40px;
+    padding-bottom: 0;
+    background: url(img/Unique_design.png) center no-repeat;
+    background-size: cover;
+}
+
+.design__photo {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.design__item {
+    display: block;
+}
+
+.design__item--iphone {
+    position: absolute;
+    bottom: -100px;
+    right: 0;
+    z-index: 1;
+}
+
+/* Wedo
+============= */
+
+.wedo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.wedo__item {
+    width: 50%
+}
+.accordion__item.active .accordion__content {
+    display: block;
+}
+
+.accordion__item.active .accordion__header:after {
+    transform: translateY(-50%) rotate(-45deg);
+}
+.accordion__header {
+    position: relative;
+
+    border-top: 1px solid #e5e5e5;
+    border-left: 1px solid #e5e5e5;
+    border-right: 1px solid #e5e5e5;
+
+    cursor: pointer;
+}
+
+.accordion__header:after { /* сtрелка */
+    content: "";
+    display: block;
+    width: 18px;
+    height: 18px;
+
+    border-top: 2px solid #ccc;
+    border-right: 2px solid #ccc;
+
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    z-index: 1;
+
+    transform: translateY(-50%) rotate(135deg);
+}
+
+.accordion__icon {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    z-index: 1;
+
+    transform: translateY(-50%);
+}
+
+.accordion__title {
+    padding: 20px 0 20px 60px;
+    color: #333;
+    font-family: "Montserrat";
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.accordion__content {
+    padding: 0 20px 0 20px;
+    display: none;
+    color: #999;
+    font-size: 15px;
+    line-height: 24px;
+    font-family: "Roboto";
+    font-style: italic;
+    font-weight: 300;
+
+    border: 1px solid #e5e5e5;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
