--- a/style.css
+++ b/style.css
@@ -904,6 +904,10 @@ h1, h2, h3, h4, h5, h6 {
 /* Map
 ====================== */
 
+.section-map {
+    padding: 0;
+}
+
 .map {
     margin: 0;
     padding: 0;
@@ -911,26 +915,27 @@ h1, h2, h3, h4, h5, h6 {
     background-size: cover;
     height: 200px;
 
-    position: relative
+    position: relative;
+    text-align: center;
 }
 
 .map__photo {
     position: absolute;
-    top: 22%;
+    top: 50%;
     left: 49.5%;
     z-index: 2;
 
 }
 
 .map__text {
-    padding-top: 80px;
-
-    text-align: center;
+    margin-top: 20px;
     color: #f38181;
     font-family: "Montserrat";
     font-size: 24px;
     font-weight: 700;
     text-transform: uppercase;
+
+    text-decoration: none;
 }
 
 .map__text:after {
@@ -941,6 +946,168 @@ h1, h2, h3, h4, h5, h6 {
     margin: 15px auto 30px;
     background-color: #f38181;
 }
+
+.map__text:hover {
+    text-decoration: underline;
+}
+
+
+
+/* Footer
+==================== */
+
+.footer {
+    padding: 70px 0;
+    background-color: #f8f8f8;
+}
+
+.footer__inner {
+    display: flex;
+}
+
+.footer__col--1 {
+    width: 40%;
+}
+
+.footer__col--2 {
+    width: 30%;
+}
+
+.footer__col--3 {
+    width: 20%;
+}
+
+.footer__logo {
+    margin-bottom: 20px;
+    color: #cccccc;
+    font-family: "Montserrat";
+    font-size: 46px;
+    font-weight: bold;
+}
+
+.footer__text {
+    margin-bottom: 30px;
+    color: #999999;
+    font-family: "Roboto";
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.footer__social {
+    margin-bottom: 25px;
+}
+.footer__social-header {
+    color: #333333;
+    font-family: "Montserrat";
+    font-size: 14px;
+
+}
+
+.footer__social-header b {
+    font-size: 18px;
+}
+
+.footer__social-header:after {
+    margin: 15px 0;
+    content: "";
+    display: block;
+    background-color: #e5e5e5;
+    height: 1px;
+    width: 480px;
+}
+
+.footer__social-content {
+    color: #999999;
+    font-family: "Roboto";
+    font-style: italic;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.footer__social-content .fab {
+    margin-left: 10px;
+    color: #95e1d3;
+    background-color: #fff;
+}
+
+.footer__social-content a {
+    color: #fff;
+}
+
+/* Subsribe
+============== */
+
+.subscribe {
+    width: 100%;
+    max-width: 380px;
+    display: flex;
+}
+
+.subcribe__input {
+    width: 60%;
+    height: 40px;
+    padding: 12px;
+
+    color: #333;
+    font-size: 15px;
+    font-family: "Roboto";
+    font-style: italic;
+    border: 1px solid #e7e7e7;
+}
+
+.subcribe__input::placeholder {
+    color: #ccc;
+}
+
+.subcribe__btn {
+    width: 40%;
+    height: 40px;
+    padding: 12px 30px;
+
+    background-color: #95e1d3;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+
+    cursor: pointer;
+}
+
+.subcribe__btn:hover {
+    background-color: #61b2a3;
+}
+
+.subcribe__btn:focus {
+    outline: 0;
+}
+
+.subcribe__input:focus {
+    outline: 0;
+    border-color: #95e1d3;
+}
+
+/* Footer__col--2
+=================== */
+
+.footer__title {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #333;
+    font-family: "Montserrat";
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
