--- a/style.css
+++ b/style.css
@@ -963,18 +963,21 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer__inner {
     display: flex;
+    justify-content: space-between;
 }
 
 .footer__col--1 {
+    /*margin-right: 50px; */
     width: 40%;
 }
 
 .footer__col--2 {
+   /* margin-right: 85px; */
     width: 30%;
 }
 
 .footer__col--3 {
-    width: 20%;
+    width: 23%;
 }
 
 .footer__logo {
@@ -1034,6 +1037,16 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
 }
 
+.footer__title {
+    margin-top: 20px;
+    margin-bottom: 35px;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #333;
+    font-family: "Montserrat";
+}
+
+
 /* Subsribe
 ============== */
 
@@ -1087,21 +1100,115 @@ h1, h2, h3, h4, h5, h6 {
     border-color: #95e1d3;
 }
 
-/* Footer__col--2
-=================== */
 
-.footer__title {
-    text-transform: uppercase;
-    font-size: 14px;
+/* Blogs
+======================= */
+
+.blogs {
+    display: flex;
+    flex-direction: column;
+}
+
+.blogs__item {
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.blogs__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    z-index: 2;
+}
+
+.blogs__content {
+    padding-top: 5px;
+    padding-left: 140px;
+}
+
+.blogs__text {
+    display: block;
     color: #333;
     font-family: "Montserrat";
+    font-size: 12px;
+    line-height: 18px;
+    text-transform: uppercase;
+
+    text-decoration: none;
+}
+
+.blogs__text:hover {
+    text-decoration: underline;
+}
+
+.blogs__data {
+    color: #999;
+    font-family: "Roboto";
+    font-style: italic;
+    font-size: 13px;
+    line-height: 24px;
 }
 
 
+/* Instagram
+========================= */
+
+.instagram {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.instagram__item {
+    margin: 0 2px 2px 0;
+    width: 32%;
+    height: 88px;
+}
+
+.instagram__item:last-child {
+    margin: 0;
+}
+
+.instagram__img {
+    width: 88px;
+    height: 88px;
+}
+
+.instagram__text {
+    margin-top: 15px;
+    color: #999;
+    font-family: "Roboto";
+    font-style: italic;
+    font-size: 13px;
+    line-height: 24px;
+}
 
 
+/* Copytright
+================= */
 
+.copyright {
 
+}
+
+.copyright__text {
+    padding: 20px 0;
+    border-top: 1px solid #e5e5e5;
+
+    text-align: center;
+    color: #333;
+    font-family: "Montserrat";
+    font-size: 14px;
+}
+
+.copyright__red {
+    color: #f38181;
+}
+
+.fas {
+    color: #fff;
+}
 
 
 
